objects/Private_Notes__c.object
<CustomObject>
    <description>This object is created as a place for the users to enter &quot;private&quot; notes.  The notes can be seen by the Owner and those above them in the role hierarchy.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account the private note is associated with.</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Private Notes</relationshipLabel>
        <relationshipName>Private_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <description>This fields hold the &quot;Body&quot; of the private note.</description>
        <label>Body</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Private_Note_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Private Note ID</label>
        <type>Text</type>
    </fields>
    <label>Private Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Private Notes</pluralLabel>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <description>Private Notes</description>
        <label>Sales</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>